--- a/index.html
+++ b/index.html
@@ -1,276 +1,352 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Revolutionizing Your Gym Wardrobe</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Revolutionizing Your Gym Wardrobe</title>
+  <!-- Google Fonts: Bebas Neue and Playfair Display -->
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet" />
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
+    body {
+      font-family: 'Playfair Display', serif;
+      background: #111;
+      color: white;
+      line-height: 1.6;
+      overflow-x: hidden;
+      font-size: 18px;
+    }
+
+    /* Hero Section for Image Animation */
+    .intro-section {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      background-color: #000;
+      overflow: hidden;
+    }
+
+    .intro-image {
+      max-width: 100%;
+      height: auto;
+      animation: zoomOut 6s ease forwards;
+    }
+
+    @keyframes zoomOut {
+      0% {
+        transform: scale(1);
+        opacity: 1;
       }
-
-      body {
-        font-family: 'Poppins', sans-serif;
-        background-color: black;
-        color: white;
-        line-height: 1.6;
+      100% {
+        transform: scale(1.1);
+        opacity: 0;
       }
+    }
 
+    /* Centered "Coming Soon" Text */
+    .centered-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      font-family: 'Bebas Neue', sans-serif;
+      font-size: 80px;
+      font-weight: 700;
+      color: white; /* White text for a clean, sleek look */
+      opacity: 0;
+      animation: fadeInText 2s forwards 6s;
+    }
+
+    @keyframes fadeInText {
+      0% {
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0.5);
+      }
+      50% {
+        opacity: 0.8;
+        transform: translate(-50%, -50%) scale(1.1);
+      }
+      100% {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+      }
+    }
+
+    /* Main header */
+    .site-header {
+      padding: 60px 80px;
+      color: white;
+      text-align: left;
+      z-index: 100;
+      position: relative;
+    }
+
+    .site-title h1 {
+      font-family: 'Bebas Neue', sans-serif;
+      font-size: 80px;
+      font-weight: 700;
+      margin-bottom: 10px;
+      color: white;
+    }
+
+    .site-title p {
+      font-family: 'Playfair Display', serif;
+      font-size: 28px;
+      font-weight: 700;
+      color: white;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+
+    /* Content Section */
+    .content-wrapper {
+      display: flex;
+      flex-direction: column;
+      padding: 50px;
+      gap: 30px;
+      background: #111;
+    }
+
+    .tagline {
+      font-family: 'Bebas Neue', sans-serif;
+      font-size: 40px;
+      font-weight: 700;
+      text-align: center;
+      color: white;
+      margin-bottom: 20px;
+    }
+
+    .quote {
+      font-size: 20px;
+      font-weight: 400;
+      text-align: center;
+      color: #fff;
+      margin: 20px 0;
+      font-style: italic;
+    }
+
+    .strategy {
+      font-size: 22px;
+      font-weight: 500;
+      color: #fff;
+      margin-bottom: 30px;
+    }
+
+    /* Contact Section */
+    .contact-section {
+      margin-top: 50px;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+
+    .contact-box,
+    .form-box {
+      background: #222;
+      padding: 40px;
+      border-radius: 15px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+      width: 100%;
+      max-width: 500px;
+    }
+
+    .contact-box h3 {
+      color: #ff4d4d;
+      margin-bottom: 20px;
+      font-size: 28px;
+    }
+
+    .contact-box p {
+      font-size: 18px;
+      line-height: 1.8;
+      margin-bottom: 20px;
+    }
+
+    .form-box {
+      flex: 1 1 500px;
+    }
+
+    .form-box h2 {
+      text-align: center;
+      color: #ff4d4d;
+      margin-bottom: 30px;
+      font-size: 30px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .name-fields {
+      display: flex;
+      gap: 20px;
+    }
+
+    .name-fields input {
+      flex: 1;
+      padding: 15px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      font-size: 18px;
+    }
+
+    input,
+    textarea {
+      padding: 15px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      font-size: 18px;
+      background-color: #333;
+      color: #fff;
+    }
+
+    textarea {
+      resize: vertical;
+      min-height: 120px;
+    }
+
+    button {
+      padding: 15px;
+      background: linear-gradient(to right, #ff4d4d, #ff7b7b);
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 18px;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background: linear-gradient(to right, #e63a3a, #f03f3f);
+    }
+
+    footer {
+      padding: 30px;
+      background-color: transparent;
+      color: white;
+      font-size: 20px;
+      font-weight: bold;
+      text-align: left;
+    }
+
+    footer p {
+      margin-bottom: 10px;
+    }
+
+    footer a {
+      color: #f8fafa;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    @media (max-width: 768px) {
       .site-header {
-        padding: 50px 60px;
-        color: white;
-        text-align: left;
+        padding: 40px;
       }
 
       .site-title h1 {
-        font-size: 60px;
-        font-weight: 800;
-        margin-bottom: 10px;
-        color: white;
+        font-size: 50px;
       }
 
-      .site-title p {
-        font-size: 30px;
-        font-weight: 800;
-        color: white;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-      }
-
-      .header-image-container {
-        width: 100%;
-        text-align: center;
-        margin-top: 30px;
-        background-color: black;
-        padding: 20px;
-      }
-
-      .header-image {
-        width: 100%;
-        height: auto;
-        object-fit: contain;
-        border-radius: 8px;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-        animation: moveImageRight 5s 2s forwards, logoShineEffect 2s forwards, rayOfLight 5s forwards;
-      }
-
-      @keyframes logoShineEffect {
-        0% {
-          filter: brightness(1);
-        }
-        50% {
-          filter: brightness(2);
-        }
-        100% {
-          filter: brightness(1);
-        }
-      }
-
-      @keyframes rayOfLight {
-        0% {
-          background: linear-gradient(to right, #ffffff, rgba(255, 255, 255, 0));
-        }
-        100% {
-          background: linear-gradient(to left, #ffffff, rgba(255, 255, 255, 0));
-        }
-      }
-
-      .section-wrapper {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 60px;
-        padding: 70px 50px;
-        max-width: 1200px;
-        margin: auto;
+      .content-wrapper {
+        padding: 30px;
       }
 
       .contact-box,
       .form-box {
-        background: black;
-        padding: 40px;
-        border-radius: 15px;
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-        width: 100%;
-        max-width: 500px;
+        max-width: 100%;
+        margin: 10px;
       }
+    }
+  </style>
+</head>
 
-      .contact-box {
-        flex: 1 1 300px;
-      }
+<body>
+  <!-- Hero Section for Image Animation -->
+  <div class="intro-section">
+    <img class="intro-image" src="https://i.postimg.cc/S2HvrdjX/IMG-4687.jpg" alt="Gym Fashion" />
+  </div>
 
-      .contact-box h3 {
-        color: #007bff;
-        margin-bottom: 20px;
-        font-size: 28px;
-      }
+  <!-- Centered "Coming Soon" Text -->
+  <div class="centered-text">
+    <h1>SHIRYON</h1>
+    <p>Coming Soon</p>
+  </div>
 
-      .contact-box p {
-        font-size: 18px;
-        line-height: 1.8;
-        margin-bottom: 20px;
-      }
+  <!-- Main Header -->
+  <div class="site-header">
+    <div class="site-title">
+      <h1>SHIRYON</h1>
+      <p>Revolutionizing your gym wardrobe</p>
+    </div>
+  </div>
 
-      .form-box {
-        flex: 1 1 500px;
-      }
-
-      .form-box h2 {
-        text-align: center;
-        color: #007bff;
-        margin-bottom: 30px;
-        font-size: 30px;
-      }
-
-      form {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-      }
-
-      .name-fields {
-        display: flex;
-        gap: 20px;
-      }
-
-      .name-fields input {
-        flex: 1;
-        padding: 15px;
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        font-size: 18px;
-      }
-
-      input,
-      textarea {
-        padding: 15px;
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        font-size: 18px;
-        background-color: #d3d3d3;
-        color: #333;
-      }
-
-      textarea {
-        resize: vertical;
-        min-height: 120px;
-      }
-
-      button {
-        padding: 15px;
-        background: linear-gradient(to right, #007bff, #00c6ff);
-        color: white;
-        border: none;
-        border-radius: 10px;
-        cursor: pointer;
-        font-size: 18px;
-        transition: background 0.3s;
-      }
-
-      button:hover {
-        background: linear-gradient(to right, #0056b3, #0099cc);
-      }
-
-      footer {
-        padding: 30px;
-        background-color: transparent;
-        color: white;
-        font-size: 20px;
-        font-weight: bold;
-        text-align: left;
-      }
-
-      footer p {
-        margin-bottom: 10px;
-      }
-
-      footer a {
-        color: #f8fafa;
-        text-decoration: none;
-        font-weight: bold;
-      }
-
-      .Address {
-        border-color: transparent;
-      }
-
-      @media (max-width: 768px) {
-        .section-wrapper {
-          flex-direction: column;
-          padding: 50px 20px;
-        }
-
-        .name-fields {
-          flex-direction: column;
-        }
-
-        .site-header {
-          padding: 40px;
-        }
-
-        .site-title h1 {
-          font-size: 40px;
-        }
-
-        .site-title p {
-          font-size: 18px;
-        }
-      }
-    </style>
-  </head>
-
-  <body>
-    <div class="site-header">
-      <div class="site-title">
-        <h1>SHIRYON</h1>
-        <p>Revolutionizing your gym wardrobe</p>
-      </div>
+  <!-- Content Wrapper -->
+  <div class="content-wrapper">
+    <div class="tagline">
+      SHIRYON<br>We saw the gap no one did.
     </div>
 
-    <div class="header-image-container">
-      <img
-        class="header-image"
-        src="https://i.postimg.cc/GmYmt6gW/IMG-4601.png"
-        alt="Gym Fashion"
-      />
+    <div class="quote">
+      “Gymwear is where running shoes were in the '80s.”<br>
+      Strength athletes don’t have gear built for them—just general fits. SHIRYON is turning functional gymwear into a precision category.
     </div>
 
-    <div class="section-wrapper">
-      <div class="contact-box">
-        <h3>Contact Us</h3>
-        <p>Interested in</p>
-        <p><b>working together?</b></p>
-        <p>Fill out the form below, and we will get in touch shortly!</p>
-        <p>We can't wait to hear from you!</p>
-        <p><strong>Email:</strong> <a href="mailto:shiryonpvtltd@gmail.com">shiryonpvtltd@gmail.com</a></p>
-        <p><strong>Phone:</strong> <a href="tel:+919032915050">9032915050</a></p>
-      </div>
+    <div class="strategy">
+      <h3>What We’re Building</h3>
+      <p>SHIRYON is not another activewear label. We are creating a new category: Dedicated Gymwear—apparel engineered for squats, pulls, and presses. The global fitness apparel market (~$200 billion by 2028) is saturated—but strength-focused athletes remain overlooked.</p>
+      <p>While yoga, running, and lifestyle segments dominate, the weight room has been left behind. SHIRYON fills that gap.</p>
 
-      <div class="form-box">
-        <h2>Register Now</h2>
-        <form name="detailsform" method="POST" action="https://formspree.io/f/xzzeyjpd">
-          <div class="name-fields">
-            <input type="text" name="first-name" placeholder="First Name" required />
-            <input type="text" name="last-name" placeholder="Last Name" required />
-          </div>
-          <input type="email" name="email" placeholder="Email Address" required />
-          <input type="tel" name="contact-number" placeholder="Contact Number" required />
-          <textarea name="message" placeholder="Message" required></textarea>
-          <button type="submit">Submit</button>
-        </form>
-      </div>
+      <h3>Our Strategy</h3>
+      <p><i>“Our unfair advantage is how we see.”</i><br>We don’t copy models. We create them—with storytelling, design intelligence, and strategic restraint.</p>
+
+      <h4>Three Pillars:</h4>
+      <ul>
+        <li>Product Development: Prototyping with award-winning industrial design firms from Poland.</li>
+        <li>Jedidya Raju - Founder | Vision Lead</li>
+        <li>Charan A - Co-Founder | Operations Lead</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Contact Section -->
+  <div class="contact-section">
+    <div class="contact-box">
+      <h3>Contact Us</h3>
+      <p>Interested in building the future of gymwear with us?</p>
+      <p>Email: <a href="mailto:founders@shiryon.in">founders@shiryon.in</a></p>
     </div>
 
-    <footer>
-      <div class="Address"></div>
-      <p>SHIRYON TEXTILES PVT LTD,</p>
-      <p>Plot 326, First floor, TNGO’s colony phase 2, Gachibowli, Hyderabad, India, 500032.</p>
-    </footer>
-  </body>
+    <div class="form-box">
+      <h2>Get In Touch</h2>
+      <form name="detailsform" method="POST" action="https://formspree.io/f/xzzeyjpd">
+        <div class="name-fields">
+          <input type="text" name="first-name" placeholder="First Name" required />
+          <input type="text" name="last-name" placeholder="Last Name" required />
+        </div>
+        <input type="email" name="email" placeholder="Email Address" required />
+        <input type="tel" name="contact-number" placeholder="Contact Number" required />
+        <textarea name="message" placeholder="Message" required></textarea>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>SHIRYON TEXTILES PVT LTD,</p>
+    <p>Plot 326, First floor, TNGO’s colony phase 2, Gachibowli, Hyderabad, India, 500032.</p>
+  </footer>
+</body>
 </html>
