--- a/index.html
+++ b/index.html
@@ -112,6 +112,40 @@
       }
     }
 
+    /* "SHIRYON" and its tagline below "Coming Soon" */
+    .tagline-container {
+      position: absolute;
+      top: 60%;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      opacity: 0;
+      animation: fadeInTagline 2s forwards 10s; /* Fade in after 10s */
+    }
+
+    @keyframes fadeInTagline {
+      0% {
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0.5);
+      }
+      100% {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+      }
+    }
+
+    .tagline-container h1 {
+      font-size: 50px;
+      margin-bottom: 10px;
+      color: white;
+    }
+
+    .tagline-container p {
+      font-size: 20px;
+      font-weight: 400;
+      color: white;
+    }
+
     /* Main header */
     .site-header {
       padding: 20px 80px;
@@ -124,6 +158,7 @@
       left: 0;
       width: 100%;
       z-index: 100;
+      display: none; /* Initially hidden */
     }
 
     .site-title h1 {
@@ -155,6 +190,7 @@
       padding: 50px;
       gap: 30px;
       background: #111;
+      display: none; /* Initially hidden */
     }
 
     .tagline {
@@ -324,11 +360,15 @@
   <!-- Centered "Coming Soon" Text -->
   <div class="centered-text">
     <p>Coming Soon</p>
-    <h1>SHIRYON</h1>
-    <p>We saw the gap no one did.</p>
   </div>
 
-  <!-- Main Header -->
+  <!-- "SHIRYON" and its tagline below the Coming Soon -->
+  <div class="tagline-container">
+    <h1>SHIRYON</h1>
+    <p>Revolutionizing your gym wardrobe</p>
+  </div>
+
+  <!-- Main Header (Logo) -->
   <div class="site-header">
     <img src="https://i.postimg.cc/S2HvrdjX/IMG-4687.jpg" alt="Shiryon Logo" />
     <div class="site-title">
@@ -397,7 +437,9 @@
     window.onload = function() {
       setTimeout(function() {
         document.querySelector('.intro-image').style.display = 'block';
-      }, 8000); // Show image after 8 seconds
+        document.querySelector('.site-header').style.display = 'flex'; // Show logo after animation
+        document.querySelector('.content-wrapper').style.display = 'flex'; // Show content after animation
+      }, 8000); // Show image and content after 8 seconds
     }
   </script>
 
