--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       left: 20px;
       width: 90px;
       opacity: 0;
-      animation: fadeInLogo 1s forwards 9s;
+      animation: fadeInLogo 1s forwards 5s;
       z-index: 10;
     }
 
@@ -46,7 +46,7 @@
     .intro-image {
       max-width: 120%;
       height: auto;
-      animation: zoomOut 8s ease forwards;
+      animation: zoomOut 4s ease forwards;
     }
 
     @keyframes zoomOut {
@@ -62,7 +62,7 @@
       text-align: center;
       font-family: 'Bebas Neue', sans-serif;
       opacity: 0;
-      animation: fadeInText 1s ease forwards 8s;
+      animation: fadeInText 1s ease forwards 4s;
     }
 
     .centered-text h1 {
@@ -83,8 +83,9 @@
 
     .post-header {
       text-align: center;
-      margin-top: 40px;
-      animation: fadeInText 1s ease forwards 9s;
+      margin-top: 30px;
+      padding: 0 20px;
+      animation: fadeInText 1s ease forwards 5s;
       opacity: 0;
     }
 
@@ -288,6 +289,5 @@
   <footer>
     SHIRYON TEXTILES PVT LTD, Plot 326, TNGO’s Colony Phase 2, Gachibowli, Hyderabad, India – 500032
   </footer>
-
 </body>
 </html>
