--- a/index.html
+++ b/index.html
@@ -17,16 +17,28 @@
       background-color: #111;
       color: white;
       overflow-x: hidden;
+      padding-top: 100px; /* Space for fixed header */
+    }
+
+    /* Header with logo */
+    .main-header {
+      width: 100%;
+      height: 100px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      background-color: transparent;
+      z-index: 10;
+      display: flex;
+      align-items: center;
+      padding: 10px 20px;
     }
 
     .logo {
-      position: fixed;
-      top: 20px;
-      left: 20px;
       width: 90px;
+      height: auto;
       opacity: 0;
       animation: fadeInLogo 1s forwards 4s;
-      z-index: 10;
     }
 
     @keyframes fadeInLogo {
@@ -55,6 +67,8 @@
     }
 
     .centered-text {
+      width: 90%;
+      max-width: 600px;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -63,6 +77,7 @@
       font-family: 'Bebas Neue', sans-serif;
       opacity: 0;
       animation: fadeInText 1s ease forwards 4s;
+      word-wrap: break-word;
     }
 
     .centered-text h1 {
@@ -84,7 +99,7 @@
 
     .post-header {
       text-align: center;
-      margin-top: 30px;
+      margin-top: 60px;
       padding: 0 20px;
       animation: fadeInText 1s ease forwards 4s;
       opacity: 0;
@@ -212,16 +227,41 @@
     }
 
     @media (max-width: 768px) {
-      .centered-text h1 { font-size: 32px; }
-      .centered-text p { font-size: 20px; }
-      .main-title { font-size: 36px; }
+      .centered-text h1 { font-size: 40px; }
+      .centered-text p { font-size: 22px; }
+
+      .main-title { font-size: 32px; }
+      .tagline-title { font-size: 18px; }
+      .subheadline { font-size: 16px; }
+
+      .slide-section h2 { font-size: 28px; }
+      .slide-section p,
+      .pillars ul { font-size: 16px; }
+
+      .contact-section {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .contact-box,
+      .form-box {
+        max-width: 90%;
+      }
+
+      input,
+      textarea,
+      button {
+        font-size: 14px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <!-- Logo (Appears after animation) -->
-  <img class="logo" src="https://i.postimg.cc/S2HvrdjX/IMG-4687.jpg" alt="SHIRYON Logo" />
+  <!-- Header with Logo -->
+  <header class="main-header">
+    <img class="logo" src="https://i.postimg.cc/S2HvrdjX/IMG-4687.jpg" alt="SHIRYON Logo" />
+  </header>
 
   <!-- Animation Section -->
   <div class="intro-section">
