--- a/index.html
+++ b/index.html
@@ -56,20 +56,19 @@
 
     .centered-text {
       position: absolute;
-      top: 50%;
-      right: 20px; /* Move text closer to the right */
-      transform: translateY(-50%);
-      text-align: right; /* Align text to the right */
+      top: 50%;  /* Adjusts position of the text */
+      left: 50%;
+      transform: translate(-50%, 20%); /* Moves it below "Coming Soon" */
+      text-align: center;
       font-family: 'Bebas Neue', sans-serif;
       opacity: 0;
       animation: fadeInText 1s ease forwards 4s;
-      width: 70%;  /* Adjust width to prevent overflow */
-      max-width: 800px; /* Adjust max-width */
+      width: 100%;
     }
 
     .centered-text h1 {
       font-size: 60px;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
     .centered-text p {
@@ -80,7 +79,7 @@
     @keyframes fadeInText {
       to {
         opacity: 1;
-        transform: translateY(-50%) scale(1);
+        transform: translate(-50%, 20%) scale(1);
       }
     }
 
