--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
       color: #fff;
     }
 
-    .centered-text p {
+    .centered-text .tagline {
       font-size: 26px;
       color: #aaa;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
-    .coming-soon {
+    .centered-text .coming-soon {
       font-size: 22px;
       font-weight: 700;
       color: #00b0ff;
@@ -215,7 +215,7 @@
     @media (max-width: 768px) {
       .centered-text h1 { font-size: 32px; }
       .centered-text p { font-size: 20px; }
-      .coming-soon { font-size: 18px; }
+      .centered-text .coming-soon { font-size: 18px; }
     }
 
     .large-slide {
@@ -233,8 +233,8 @@
     <img class="intro-image" src="https://i.postimg.cc/S2HvrdjX/IMG-4687.jpg" alt="Gym Fashion" />
     <div class="centered-text">
       <h1>SHIRYON</h1>
-      <p>Revolutionizing your gym wardrobe</p>
-      <div class="coming-soon">SHIRYON — Coming Soon</div>
+      <p class="tagline">Revolutionizing your gym wardrobe</p>
+      <p class="coming-soon">SHIRYON — Coming Soon</p>
     </div>
   </div>
 
@@ -289,5 +289,6 @@
   <footer>
     SHIRYON TEXTILES PVT LTD, Plot 326, TNGO’s Colony Phase 2, Gachibowli, Hyderabad, India – 500032
   </footer>
+
 </body>
 </html>
