--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      opacity: 0.15;
+      opacity: 0.5; /* Adjusted opacity to match subtle Ferrari-like animation */
     }
 
     @keyframes zoomOut {
       0% { transform: scale(1); opacity: 1; }
-      100% { transform: scale(1.2); opacity: 0; }
+      100% { transform: scale(1.05); opacity: 0.5; } /* Less aggressive scaling and opacity */
     }
 
     .centered-text {
@@ -264,13 +264,11 @@
     <section class="slide-section">
       <h2>Contact</h2>
       <p>Let’s Build the Future of Gymwear.<br>Whether you’re an investor, collaborator, strategic advisor, or just curious—we’d love to connect.</p>
-
       <div class="contact-section">
         <div class="contact-box">
           <h3>Contact Us</h3>
           <p>Email: <a href="mailto:founders@shiryon.in" style="color: #00b0ff;">founders@shiryon.in</a></p>
         </div>
-
         <div class="form-box">
           <h2>Get In Touch</h2>
           <form method="POST" action="https://formspree.io/f/xzzeyjpd">
