--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      opacity: 0.5; /* Adjusted opacity to match subtle Ferrari-like animation */
+      opacity: 0.8; /* Reduced opacity for softer effect */
     }
 
     @keyframes zoomOut {
       0% { transform: scale(1); opacity: 1; }
-      100% { transform: scale(1.05); opacity: 0.5; } /* Less aggressive scaling and opacity */
+      100% { transform: scale(1.02); opacity: 0.7; } /* Even less aggressive scaling */
     }
 
     .centered-text {
