--- a/index.html
+++ b/index.html
@@ -47,21 +47,16 @@
     }
 
     .intro-image {
-      max-width: 120%;
-      height: auto;
-      animation: zoomOut 4s ease forwards;
-      position: absolute;
-      top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain; /* Prevent cropping */
+      animation: zoomOut 4s ease forwards;
       opacity: 0.8; /* Reduced opacity for softer effect */
     }
 
     @keyframes zoomOut {
       0% { transform: scale(1); opacity: 1; }
-      100% { transform: scale(1.02); opacity: 0.7; } /* Even less aggressive scaling */
+      100% { transform: scale(1.02); opacity: 0.7; } /* Subtle zoom-out */
     }
 
     .centered-text {
