--- a/index.html
+++ b/index.html
@@ -28,12 +28,15 @@
       left: 20px;
       width: 90px;
       opacity: 0;
-      animation: fadeInLogo 1s forwards 4s;
+      animation: logoZoomIn 2s ease forwards 2s; /* Animation added */
       z-index: 10;
     }
 
-    @keyframes fadeInLogo {
-      to { opacity: 1; }
+    /* Ferrari-style Logo Animation */
+    @keyframes logoZoomIn {
+      0% { transform: scale(0); opacity: 0; }
+      50% { transform: scale(1.2); opacity: 1; }
+      100% { transform: scale(1); opacity: 1; }
     }
 
     .intro-section {
@@ -49,14 +52,14 @@
     .intro-image {
       width: 100%;
       height: 100%;
-      object-fit: contain; /* Prevent cropping */
+      object-fit: contain;
       animation: zoomOut 4s ease forwards;
       opacity: 0.8; /* Reduced opacity for softer effect */
     }
 
     @keyframes zoomOut {
       0% { transform: scale(1); opacity: 1; }
-      100% { transform: scale(1.02); opacity: 0.7; } /* Subtle zoom-out */
+      100% { transform: scale(1.02); opacity: 0.7; }
     }
 
     .centered-text {
