--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       100% { transform: scale(1); opacity: 1; }
     }
 
-    /* Ferrari-style Image Animation */
+    /* Ferrari-style Intro Section */
     .intro-section {
       height: 100vh;
       display: flex;
@@ -54,23 +54,44 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      animation: ferrariZoomInOut 4s ease-in-out forwards;
-      opacity: 0.8;
-      animation-delay: 2s;
+      animation: ferrariZoomPan 5s cubic-bezier(0.33, 1, 0.68, 1), hideImage 0.1s linear 5s forwards;
+      opacity: 0.9;
+      filter: brightness(1.05);
+      transform-origin: center;
+      animation-fill-mode: forwards;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
     }
 
-    @keyframes ferrariZoomInOut {
-      0% { 
-        transform: scale(1.2) translateX(-20%); 
-        opacity: 1; 
-      }
-      50% { 
-        transform: scale(1) translateX(0); 
-        opacity: 1; 
-      }
-      100% { 
-        transform: scale(1.1) translateX(20%);
+    @keyframes ferrariZoomPan {
+      0% {
+        transform: scale(1.2) translateX(-10%) translateY(0);
         opacity: 0;
+        filter: brightness(0.8) blur(1px);
+      }
+      25% {
+        opacity: 1;
+        filter: brightness(1) blur(0px);
+      }
+      50% {
+        transform: scale(1.05) translateX(0%) translateY(-1%);
+      }
+      75% {
+        transform: scale(1.1) translateX(10%) translateY(1%);
+      }
+      100% {
+        transform: scale(1.15) translateX(20%) translateY(0%);
+        opacity: 0;
+        filter: brightness(1) blur(1px);
+      }
+    }
+
+    @keyframes hideImage {
+      to {
+        display: none;
+        visibility: hidden;
       }
     }
 
@@ -241,10 +262,10 @@
 
   <!-- Intro Section -->
   <div class="intro-section">
-    <!-- Image will be shown initially, but it's removed after animation -->
+    <!-- Ferrari-style animated image -->
     <img class="intro-image" src="https://i.postimg.cc/S2HvrdjX/IMG-4687.jpg" alt="Gym Fashion" />
-    
-    <!-- Text will fade in after the image animation -->
+
+    <!-- Text overlay -->
     <div class="centered-text">
       <h1>SHIRYON</h1>
       <p class="tagline">Revolutionizing your gym wardrobe</p>
