--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SHIRYON | Revolutionizing Gymwear</title>
 
-  <!-- Ferrari-style Orbitron Font -->
+  <!-- Orbitron Font -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet" />
 
   <style>
@@ -27,15 +27,7 @@
       top: 20px;
       left: 20px;
       width: 90px;
-      opacity: 0;
-      animation: logoZoomIn 2s ease forwards 2s;
       z-index: 10;
-    }
-
-    @keyframes logoZoomIn {
-      0% { transform: scale(0); opacity: 0; }
-      50% { transform: scale(1.5); opacity: 1; }
-      100% { transform: scale(1); opacity: 1; }
     }
 
     .intro-section {
@@ -58,40 +50,12 @@
       opacity: 0.95;
       filter: brightness(1.1);
       z-index: 1;
-      animation: ferrariZoomPan 5s ease-in-out forwards, hideImage 0s linear 5s forwards;
-    }
-
-    @keyframes ferrariZoomPan {
-      0% {
-        transform: scale(1.1) translateX(-10%);
-        opacity: 1;
-        filter: brightness(1) blur(0px);
-      }
-      50% {
-        transform: scale(1.15) translateX(0%);
-        opacity: 1;
-        filter: brightness(1.05) blur(0px);
-      }
-      100% {
-        transform: scale(1.2) translateX(10%);
-        opacity: 0;
-        filter: blur(2px);
-      }
-    }
-
-    @keyframes hideImage {
-      to {
-        visibility: hidden;
-        display: none;
-      }
     }
 
     .centered-text {
       position: absolute;
       z-index: 2;
       text-align: center;
-      opacity: 0;
-      animation: fadeInText 1s ease forwards 4s;
     }
 
     .centered-text h1 {
@@ -99,64 +63,53 @@
       margin-bottom: 10px;
       letter-spacing: 2px;
       color: #fff;
+      font-weight: bold;
     }
 
     .centered-text .tagline {
       font-size: 26px;
       color: #aaa;
-      margin-bottom: 10px;
+      font-weight: bold;
     }
 
     .centered-text .coming-soon {
       font-size: 22px;
-      font-weight: 700;
+      font-weight: bold;
       color: #00b0ff;
-      animation: fadeUp 1.5s ease-out forwards 5.5s;
-      opacity: 0;
       letter-spacing: 1.5px;
-    }
-
-    @keyframes fadeInText {
-      to {
-        opacity: 1;
-        transform: scale(1);
-      }
-    }
-
-    @keyframes fadeUp {
-      from {
-        transform: translateY(10px);
-        opacity: 0;
-      }
-      to {
-        transform: translateY(0);
-        opacity: 1;
-      }
+      margin-top: 10px;
     }
 
     .content-wrapper {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .slide-section {
+      height: 100vh;
       padding: 50px 30px;
       display: flex;
       flex-direction: column;
-      gap: 50px;
+      justify-content: center;
+      gap: 30px;
+      text-align: center;
     }
 
     .slide-section h2 {
       font-size: 42px;
-      margin-bottom: 20px;
-      text-align: center;
       color: #ffffff;
-      font-weight: 800;
+      font-weight: bold;
       text-shadow: 0 0 8px rgba(0, 176, 255, 0.4);
       letter-spacing: 1px;
     }
 
-    .slide-section p {
+    .slide-section p,
+    .pillars li {
       font-size: 24px;
       line-height: 1.6;
-      text-align: center;
       max-width: 900px;
       margin: 0 auto;
+      font-weight: bold;
     }
 
     .pillars ul {
@@ -165,6 +118,7 @@
       font-size: 18px;
       line-height: 1.8;
       padding-left: 20px;
+      text-align: left;
     }
 
     .pillars li {
@@ -194,6 +148,7 @@
       font-size: 26px;
       margin-bottom: 20px;
       text-align: center;
+      font-weight: bold;
     }
 
     .contact-box p,
@@ -201,6 +156,7 @@
     textarea {
       color: #00b0ff;
       font-size: 16px;
+      font-weight: bold;
     }
 
     form {
@@ -225,6 +181,7 @@
       border-radius: 8px;
       font-size: 16px;
       cursor: pointer;
+      font-weight: bold;
     }
 
     button:hover {
@@ -240,12 +197,8 @@
 
     @media (max-width: 768px) {
       .centered-text h1 { font-size: 32px; }
-      .centered-text p { font-size: 20px; }
+      .centered-text .tagline { font-size: 20px; }
       .centered-text .coming-soon { font-size: 18px; }
-    }
-
-    .large-slide {
-      padding: 80px 20px;
     }
   </style>
 </head>
@@ -266,7 +219,7 @@
 
   <!-- Content -->
   <div class="content-wrapper">
-    <section class="slide-section large-slide">
+    <section class="slide-section">
       <h2>What We’re Building</h2>
       <p>SHIRYON is not another activewear label. We are creating a new category: Dedicated Gymwear—apparel engineered for squats, pulls, and presses. The global fitness apparel market (~$200 billion by 2028) is saturated—but strength-focused athletes remain overlooked.</p>
       <p>While yoga, running, and lifestyle segments dominate, the weight room has been left behind. SHIRYON fills that gap.</p>
