--- a/index.html
+++ b/index.html
@@ -47,15 +47,47 @@
       position: absolute;
       top: 0;
       left: 0;
-      opacity: 0.95;
+      opacity: 1;
       filter: brightness(1.1);
       z-index: 1;
+      animation: ferrariZoomPanFade 4.5s ease-in-out forwards;
+    }
+
+    @keyframes ferrariZoomPanFade {
+      0% {
+        transform: scale(1.05) translateX(-5%);
+        opacity: 1;
+        filter: brightness(1.2);
+      }
+      50% {
+        transform: scale(1.1) translateX(0%);
+        opacity: 1;
+        filter: brightness(1.1);
+      }
+      100% {
+        transform: scale(1.15) translateX(5%);
+        opacity: 0;
+        filter: brightness(0.7) blur(2px);
+      }
     }
 
     .centered-text {
       position: absolute;
       z-index: 2;
       text-align: center;
+      opacity: 0;
+      animation: fadeTextIn 1.2s ease-in 4.5s forwards;
+    }
+
+    @keyframes fadeTextIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .centered-text h1 {
