--- a/index.html
+++ b/index.html
@@ -32,42 +32,36 @@
 
     .intro-section {
       height: 100vh;
+      position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(to bottom, #000000, #111111, #1a1a1a);
-      position: relative;
       overflow: hidden;
     }
 
     .intro-image {
       width: 100%;
-      height: 60vh;
+      height: 100%;
       object-fit: cover;
       position: absolute;
       top: 0;
       left: 0;
-      opacity: 1;
-      filter: brightness(1.1);
       z-index: 1;
-      animation: ferrariZoomPanFade 4.5s ease-in-out forwards;
+      animation: zoomFade 5s ease-in-out forwards;
     }
 
-    @keyframes ferrariZoomPanFade {
+    @keyframes zoomFade {
       0% {
-        transform: scale(1.05) translateX(-5%);
+        transform: scale(1);
         opacity: 1;
-        filter: brightness(1.2);
       }
-      50% {
-        transform: scale(1.1) translateX(0%);
+      60% {
+        transform: scale(1.1);
         opacity: 1;
-        filter: brightness(1.1);
       }
       100% {
-        transform: scale(1.15) translateX(5%);
+        transform: scale(1.2);
         opacity: 0;
-        filter: brightness(0.7) blur(2px);
       }
     }
 
@@ -76,26 +70,20 @@
       z-index: 2;
       text-align: center;
       opacity: 0;
-      animation: fadeTextIn 1.2s ease-in 4.5s forwards;
+      animation: fadeInText 2s ease-in 4s forwards;
     }
 
-    @keyframes fadeTextIn {
-      from {
-        opacity: 0;
-        transform: translateY(10px);
-      }
+    @keyframes fadeInText {
       to {
         opacity: 1;
-        transform: translateY(0);
       }
     }
 
     .centered-text h1 {
       font-size: 60px;
-      margin-bottom: 10px;
-      letter-spacing: 2px;
       color: #fff;
       font-weight: bold;
+      letter-spacing: 2px;
     }
 
     .centered-text .tagline {
@@ -123,8 +111,8 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      gap: 30px;
       text-align: center;
+      gap: 30px;
     }
 
     .slide-section h2 {
@@ -171,7 +159,7 @@
       border-radius: 10px;
       max-width: 500px;
       flex: 1;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     }
 
     .contact-box h3,
