--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
     }
 
     .intro-image {
-      width: 100%;
-      height: 100%;
+      width: 50%; /* Adjust this value to make the image smaller */
+      height: auto;
       object-fit: cover;
       position: absolute;
-      top: 0;
-      left: 0;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       z-index: 1;
       animation: zoomFade 5s ease-in-out forwards;
     }
