--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
 
     .intro-image {
-      width: 50%; /* Adjust this value to make the image smaller */
+      width: 40%; /* Make the image smaller */
       height: auto;
       object-fit: cover;
       position: absolute;
@@ -57,11 +57,11 @@
         opacity: 1;
       }
       60% {
-        transform: scale(1.1);
+        transform: scale(1.05); /* Slight zoom for the Ferrari-like effect */
         opacity: 1;
       }
       100% {
-        transform: scale(1.2);
+        transform: scale(1.1); /* Final zoom effect */
         opacity: 0;
       }
     }
